--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "sourceMap": true,
         "target": "es6",
         "module": "commonjs",
+        "strict": true,
     },
     "exclude": [
         "node_modules",
